--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "mini-css-extract-plugin": "^2.6.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.3.0"
+        "react-router-dom": "^6.3.0",
+        "react-p5-wrapper": "^3.3.0"
     },
     "devDependencies": {
         "@babel/core": "^7.18.9",
