--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
     "main": "index.js",
     "homepage": "./",
     "scripts": {
-        "start": "webpack-dev-server --mode development --open --hot",
+        "dev": "webpack-dev-server --mode development --open --hot",
+        "start": "node server.js",
         "build": "webpack --mode production"
     },
     "author": "stef altavista",
     "license": "ISC",
     "dependencies": {
+        "express": "^4.18.1",
         "mini-css-extract-plugin": "^2.6.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.3.0",
-        "react-p5-wrapper": "^3.3.0"
+        "react-p5-wrapper": "^3.3.0",
+        "react-router-dom": "^6.3.0"
     },
     "devDependencies": {
         "@babel/core": "^7.18.9",
