--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "scripts": {
         "dev": "webpack-dev-server --mode development --open --hot",
         "start": "node server.js",
-        "build": "webpack --mode production"
+        "build": "webpack --mode production "
     },
     "author": "stef altavista",
     "license": "ISC",
     "dependencies": {
         "express": "^4.18.1",
+        "gsap": "^3.11.2",
         "mini-css-extract-plugin": "^2.6.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
