--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "express": "^4.18.1",
         "gsap": "^3.11.2",
         "mini-css-extract-plugin": "^2.6.1",
+        "nodemailer": "^6.8.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-p5-wrapper": "^3.3.0",
