--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "homepage": "./",
     "scripts": {
         "dev": "webpack-dev-server --mode development --open --hot",
-        "start": "node server.js",
+        "start": "node ./server/server.js",
         "build": "webpack --mode production "
     },
     "author": "stef altavista",
@@ -14,6 +14,7 @@
     "dependencies": {
         "express": "^4.18.1",
         "gsap": "^3.11.2",
+        "https": "^1.0.0",
         "mini-css-extract-plugin": "^2.6.1",
         "nodemailer": "^6.8.0",
         "react": "^18.2.0",
