--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-p5-wrapper": "^3.3.0",
-        "react-router-dom": "^6.3.0"
+        "react-router-dom": "^6.3.0",
+        "typewriter-effect": "^2.21.0"
     },
     "devDependencies": {
         "@babel/core": "^7.18.9",
